--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -27,4 +27,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: WPFTrainner
-        path: DarkStyle\obj\Debug\bin
+        path: WPFTrainner\Debug\bin
