--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -23,4 +23,4 @@ jobs:
       run: msbuild /m /p:Configuration=Debug WPFTrainner\WPFTrainner.sln
 
     - name: test
-      run: dir D:\a\SuperPVZTrainner\SuperPVZTrainner
+      run: dir D:\a\SuperPVZTrainner\SuperPVZTrainner\WPFTrainner
