--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -21,6 +21,9 @@ jobs:
 
     - name: Build
       run: msbuild /m /p:Configuration=Debug WPFTrainner\WPFTrainner.sln
-
-    - name: test
-      run: dir D:\a\SuperPVZTrainner\SuperPVZTrainner\WPFTrainner
+      
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: WPFTrainner
+        path: WPFTrainner\WPFTrainner\bin\Debug\
